# chaptify

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
chaptify/: chapti.py  const.py  enums.py  utils.py
chaptify/scripts/: cli.py
tests/: __init__.py  test_chaptify.py  test_cli.py
