[tool.poetry]
name = "chaptify"
version = "0.1.0"
description = "Convert audio from chapter enabled YouTube videos to your Spotify playlist"
authors = ["nickatnight <nickkelly.858@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/nickatnight/chaptify"
repository = "https://github.com/nickatnight/chaptify"

[tool.poetry.dependencies]
python = "^3.9"
youtube_dl = "^2021.4.26"
spotipy = "^2.18.0"
click = "^8.0.0"
tqdm = "^4.60.0"
colorama = "^0.4.4"
emoji = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
flake8 = "^3.9.2"
coverage = "^5.5"

[tool.poetry.scripts]
chaptify = "chaptify.scripts.cli:main"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
